Issue #7472: disable instatiation of modules with private ctor